test/fail_compilation/bug5b.d
// REQUIRED_ARGS: -w

int test1()
{
}

